--- a/module/Application/view/partials/header.phtml
+++ b/module/Application/view/partials/header.phtml
@@ -5,7 +5,7 @@
 
 <head>
     <meta charset="utf-8">
-    <?= $this->headTitle('ITISDE - IT Innovative Skills & Data Enginnering')->setSeparator(' - ')->setAutoEscape(false) ?>
+    <?= $this->headTitle('Agence Immobilière | Real Estate Agency')->setSeparator(' - ')->setAutoEscape(false) ?>
 
     <?= $this->headMeta()
             ->appendName('viewport', 'width=device-width, initial-scale=1.0')
